--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <h2></h2> 
  <div class="header">
    <h1>       
-     <img class="pic" src="images/todo.png" alt="Todo App">
+     <img class="pic" src="todo.png" alt="Todo App">
        <font color="#000000">TO DO</font>TASK APP</h1>
   
 </div>
